--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm src/server.ts",
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/server.ts\"",
     "build": "npm install && npx tsc",
     "start": "node dist/server.js"
   },
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
@@ -27,7 +28,9 @@
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
