--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ PGUSER=neondb_owner
 PGPASSWORD=
 PGSSLMODE=require
 PGCHANNELBINDING=require
+
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+
+FRONTEND_URL=http://localhost:5000
