--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/server.ts\"",
+    "dev": "node dist/server.js",
     "build": "npm install && npx tsc",
     "start": "node dist/server.js"
   },
@@ -20,16 +20,21 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "stripe": "^20.1.0",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/hpp": "^0.2.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
